setup production stuff

--- a/DiceMiceAPI/appsettings.json
+++ b/DiceMiceAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "App": {
+    "Urls": "{InsertUrls}"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,15 +10,15 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Issuer": "{EnterJwtIssuer}",
-    "Audience": "{EnterJwtAudience}",
-    "EncryptionKey": "{EnterEncryptionKey}"
+    "Issuer": "{InsertJwtIssuer}",
+    "Audience": "{InsertJwtAudience}",
+    "EncryptionKey": "{InsertEncryptionKey}"
   },
   "Discord": {
-    "ClientId": "{EnterClientId}",
-    "ClientSecret": "{EnterClientSecret}"
+    "ClientId": "{InsertClientId}",
+    "ClientSecret": "{InsertClientSecret}"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "{EnterConnectionString}"
+    "DefaultConnection": "{InsertConnectionString}"
   }
 }
