Switch to JWT Auth

--- a/DiceMiceAPI/appsettings.Production.json
+++ b/DiceMiceAPI/appsettings.Production.json
@@ -19,6 +19,7 @@
   },
   "Discord": {
     "ClientId": "${DISCORD_CLIENT_ID}",
-    "ClientSecret": "${DISCORD_CLIENT_SECRET}"
+    "ClientSecret": "${DISCORD_CLIENT_SECRET}",
+    "RedirectUri": "${DISCORD_REDIRECT_URI}"
   }
 }
