--- a/DiceMiceAPI/appsettings.json
+++ b/DiceMiceAPI/appsettings.json
@@ -16,7 +16,8 @@
   },
   "Discord": {
     "ClientId": "{InsertClientId}",
-    "ClientSecret": "{InsertClientSecret}"
+    "ClientSecret": "{InsertClientSecret}",
+    "RedirectUri": "{InsertRedirectUri}"
   },
   "ConnectionStrings": {
     "DefaultConnection": "{InsertConnectionString}"
