add redirect to frontend after jwt auth

--- a/DiceMiceAPI/appsettings.Production.json
+++ b/DiceMiceAPI/appsettings.Production.json
@@ -1,6 +1,7 @@
 {
   "App": {
-    "Urls": "${ASPNETCORE_URLS}"
+    "Urls": "${ASPNETCORE_URLS}",
+    "FrontendUrl": "{FRONTEND_URL}"
   },
   "Logging": {
     "LogLevel": {
@@ -10,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  "DefaultConnection": "Host=${DB_HOST};Port=${DB_PORT};Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD};SslMode=Require"
+    "DefaultConnection": "Host=${DB_HOST};Port=${DB_PORT};Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD};SslMode=Require"
   },
   "Jwt": {
     "Issuer": "${JWT_ISSUER}",
