--- a/DiceMiceAPI/appsettings.json
+++ b/DiceMiceAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "App": {
-    "Urls": "{InsertUrls}"
+    "Urls": "{InsertUrls}",
+    "FrontendUrl": "{InsertFrontendUrl}"
   },
   "Logging": {
     "LogLevel": {
